# numerics

./: Cargo.toml  README.md
src/: determinants.rs  equations_solver.rs  interpolations.rs  lib.rs  root_finder.rs  search.rs  sorting.rs
