[package]
name = "numerics"
version = "1.0.0"
edition = "2024"
description = "Implementation of various numerical algorithms"
keywords = ["numerical"]
license = "GPL-3.0-only"
authors = ["Panos Asproulis <p.asproulis@icloud.com>"]
rust-version = "1.85"

[dependencies]
rayon = "1.5.1"

[dev-dependencies]
approx = "0.5.1"
rand = "0.9.0"

[lib]
name = "numerics"
path = "src/lib.rs"

[profile.release]
opt-level = 3
debug = 0
lto = true
panic = "abort"
overflow-checks = false
incremental = true
strip = true
codegen-units = 1
debug-assertions = false
rpath = false

[profile.dev]
opt-level = 0
debug = 2
lto = false
panic = "unwind"
overflow-checks = true
incremental = true
strip = false
codegen-units = 1
debug-assertions = true
rpath = false
